<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp">

        <ImageView
            android:id="@+id/boat_photo"
            style="@style/BoatItem.Photo"
            android:contentDescription="@string/boat_photo"
            android:src="@drawable/boat_photo" />

        <TextView
            android:id="@+id/boat_name"
            style="@style/BoatItem.TextContent.Name"
            android:text="@string/boat_name" />

        <TextView
            android:id="@+id/boat_depart"
            style="@style/BoatItem.TextContent.Info.Route"
            android:layout_below="@id/boat_name"
            android:text="@string/boat_depart" />

        <TextView
            android:id="@+id/boat_depart_time"
            style="@style/BoatItem.TextContent.Info.Time"
            android:layout_below="@id/boat_depart"
            android:text="@string/boat_depart_time" />

        <TextView
            android:id="@+id/boat_info_to"
            style="@style/BoatItem.TextContent.Info"
            android:layout_below="@id/boat_depart_time"
            android:text="@string/to" />

        <TextView
            android:id="@+id/boat_arrive"
            style="@style/BoatItem.TextContent.Info.Route"
            android:layout_below="@id/boat_info_to"
            android:text="@string/boat_arrive" />

        <TextView
            android:id="@+id/boat_arrive_time"
            style="@style/BoatItem.TextContent.Info.Time"
            android:layout_below="@id/boat_arrive"
            android:text="@string/boat_arrive_time" />

        <Button
            android:id="@+id/boat_detail"
            style="@style/BoatItem.Detail"
            android:layout_below="@id/boat_arrive_time"
            android:text="@string/detail" />

    </RelativeLayout>

</android.support.v7.widget.CardView>