<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="id.web.zaf.boatprice.DetailBoatPrice">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/boat_photo"
                style="@style/BoatDetail.Photo"
                android:src="@drawable/boat_photo" />

            <TextView
                android:id="@+id/boat_price"
                style="@style/BoatDetail.Wrapper.Price"
                android:text="@string/boat_price" />

        </FrameLayout>

        <LinearLayout
            style="@style/BoatDetail.Wrapper"
            android:orientation="vertical">

            <TableLayout style="@style/BoatDetail.Description">

                <TableRow style="@style/BoatDetail.Description.Row">

                    <TextView
                        style="@style/BoatDetail.Description.Field"
                        android:text="@string/departure" />

                    <TextView
                        android:id="@+id/boat_depart"
                        style="@style/BoatDetail.Description.Value"
                        android:text="@string/boat_depart" />

                </TableRow>

                <TableRow style="@style/BoatDetail.Description.Row">

                    <TextView
                        style="@style/BoatDetail.Description.Field"
                        android:text="@string/depart_time" />

                    <TextView
                        android:id="@+id/boat_depart_time"
                        style="@style/BoatDetail.Description.Value"
                        android:text="@string/depart_time" />

                </TableRow>

                <TableRow style="@style/BoatDetail.Description.Row">

                    <TextView
                        style="@style/BoatDetail.Description.Field"
                        android:text="@string/arrival" />

                    <TextView
                        android:id="@+id/boat_arrive"
                        style="@style/BoatDetail.Description.Value"
                        android:text="@string/boat_arrive" />

                </TableRow>

                <TableRow style="@style/BoatDetail.Description.Row">

                    <TextView
                        style="@style/BoatDetail.Description.Field"
                        android:text="@string/arrival_time" />

                    <TextView
                        android:id="@+id/boat_arrive_time"
                        style="@style/BoatDetail.Description.Value"
                        android:text="@string/arrival_time" />

                </TableRow>

                <TableRow style="@style/BoatDetail.Description.Row">

                    <TextView
                        style="@style/BoatDetail.Description.Field"
                        android:text="@string/agent" />

                    <TextView
                        android:id="@+id/boat_agent"
                        style="@style/BoatDetail.Description.Value"
                        android:text="@string/boat_agent" />

                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/book_now"
                style="@style/BoatDetail.Book"
                android:text="@string/book_now" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
